--- a/app/main/views/main/main.html
+++ b/app/main/views/main/main.html
@@ -9,7 +9,7 @@
         <:nav href="/about">About</:nav>
         <:user_templates:menu />
       </ul>
-      <h3 class="text-muted">heroku_deployment_test</h3>
+      <h3 class="text-muted">Heroku Deployment Test of Volt</h3>
     </div>
 
     <:volt:notices />
